--- a/photobooth-app/src/pages/PhotoBooth/PhotoBooth.scss
+++ b/photobooth-app/src/pages/PhotoBooth/PhotoBooth.scss
@@ -1,4 +1,18 @@
 
 .PhotoBooth{
-
+    max-width: 1280px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+}
+.webcam_standin{
+    width: 800px;
+    height: 600px;
+    background-color: rgb(233, 233, 233);
+    border-radius: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
